# codebase-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: analyze.py  chat.py  index.py  ingest.py  search.py
backend/app/core/: config.py  lifespan.py
backend/app/models/: analyze.py  chat.py  index.py  ingest.py  search.py
backend/app/repositories/: github_repo.py  pinecone_repo.py
backend/app/services/: analyzer.py  chat.py  chunker.py  embedding.py  github.py  indexer.py  ingestion.py  repository_identity.py  retrieval.py
backend/codebase_analyzer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/unit/: test_analyze_route.py  test_chat_service.py  test_embedding_service.py  test_github_service.py  test_health.py  test_retrieval_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: env.d.ts  main.tsx  styles.css
frontend/src/app/: App.tsx  providers.tsx  router.tsx
frontend/src/features/analyze/components/: RepositoryAnalyzerPanel.tsx
frontend/src/features/analyze/hooks/: useAnalyzeRepository.ts  useIndexRepository.ts  useRepositoryChat.ts
frontend/src/features/analyze/services/: analyzeService.ts  chatService.ts  indexService.ts
frontend/src/features/analyze/types/: index.ts
frontend/src/features/chat/: index.ts
frontend/src/features/chat/hooks/: useChat.ts
frontend/src/features/chat/services/: chatService.ts
frontend/src/features/chat/types/: index.ts
frontend/src/features/ingest/: index.ts
frontend/src/features/search/: index.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  NotFoundPage.tsx  SearchPage.tsx
frontend/src/shared/utils/: apiClient.ts
(+9 files in other folders)
