[project]
name = "codebase-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for codebase analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "huggingface-hub>=0.33.0",
  "numpy>=1.26.0",
  "pinecone>=5.4.0",
  "torch>=2.3.0",
  "transformers>=4.44.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
