[project]
name = "codebase-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for codebase analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "langchain==0.2.17",
  "langchain-community==0.2.18",
  "langchain-huggingface>=0.0.3",
  "langchain-pinecone>=0.1.0",
  "pinecone>=5.0.0",
  "sentence-transformers>=3.0.1",
  "torch>=2.3.0",
  "transformers>=4.45.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
